kubernetes-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    name: development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-deployment
  namespace: development
  labels:
    app: car
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car
  template:
    metadata:
      labels:
        app: car
    spec:
      containers:
      - name: station-car
        image: station-car:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: car-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: car
  ports:
    - protocol: TCP
      port: 4567
      targetPort: 4567
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-deployment
  namespace: development
  labels:
    app: train
spec:
  replicas: 2
  selector:
    matchLabels:
      app: train
  template:
    metadata:
      labels:
        app: train
    spec:
      containers:
      - name: station-train
        image: station-train:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq-deployment
  namespace: development
  labels:
    app: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
      - name: station-train
        image: station-train:latest
        imagePullPolicy: Never
        command:
          - /bin/bash
          - -c
          - 'bundle exec sidekiq'
---
apiVersion: v1
kind: Service
metadata:
  name: train-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: train
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: station-ingress
  namespace: development
spec:
  rules:
  - host: car.k8s-station.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: car-service
            port:
              number: 4567
  - host: train.k8s-station.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: train-service
            port:
              number: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: development
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.7-alpine
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: development
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
